kubernetes_files/app_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-application
  labels:
    name: py-app

spec:
  template:
    metadata:
      labels:
        name: py-app

    spec:
      containers:
        - name: app-container
          image: us-central1-docker.pkg.dev/abdelsalam-billing-account/gcp-task/task-image
          containerPort:
            - port : 8000    
  replicas: 3
  selector:
    matchLabels:
      name: py-app
