kubernetes_files/redis_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      type: redis
  template:
    metadata:
      labels:
        type: redis
    spec:
      containers:
        - name: redis
          image: us-central1-docker.pkg.dev/abdelsalam-billing-account/gcp-task/redis-image
          ports:
            - containerPort: 6379
