kubernetes_files/lb.yml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
spec:
  type: LoadBalancer
  selector:
    name: py-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
