kubernetes_files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress
spec:
  defaultBackend:
    service:
      name: py-app
      port:
        number: 8000
status:
  loadBalancer: {}
